# kobayashi-maru-benchmark

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml
.codex/agents/: developer.toml
.codex/rsc/: .rsc-state.json  analyze  automation-strategy  clarify  constitution  debug  fable-operator  harness  implement  init  orient  parallel  plan  review  sdd  sdd-init  ship  specify  suggest  tasks  verify  worktrees
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-pages.yml
.rsc/: .base-versions.json  skill-registry.json  skill-registry.md
apps/web/: eslint.config.mjs  next-env.d.ts  next.config.ts  package.json  tsconfig.json
benchmark/: eval.draft.yaml
benchmark/models/: community-models-2026-07-16.json  model-taxonomy-2026-07-16.json  ollama-cloud-2026-07-14.json  openrouter-reference-models-2026-07-15.json  reference-models-2026-07-14.json  reference-models-2026-07-15.json
benchmark/rubrics/: v0.1.0.json  v0.3.0.json
benchmark/schemas/: calibration-item.schema.json  run.schema.json  sample.schema.json  summary.schema.json
docs/: governance.md  hugging-face-publication.md  methodology.md
src/kobayashi_benchmark/: __init__.py  adapters.py  calibration.py  (+10 more)
tests/: test_adapters.py  test_calibration.py  test_cli.py  test_dataset.py  test_model_cohorts.py  test_model_taxonomy.py  test_openrouter.py  test_protocol.py  test_release_artifacts.py  test_reporting.py  test_runner.py  test_scoring.py  test_web_content.py
(+756 files in other folders)
