[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "kobayashi-benchmark"
version = "0.2.0"
description = "Reproducible evaluation of lethal-action autonomy, oversight, and counterfactual consistency in language models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kobayashi Benchmark contributors" }]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
kobayashi = "kobayashi_benchmark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kobayashi_benchmark"]

[tool.hatch.build.targets.wheel.force-include]
"benchmark/VERSION" = "kobayashi_benchmark/benchmark/VERSION"
"benchmark/rubrics" = "kobayashi_benchmark/benchmark/rubrics"
"benchmark/scenarios" = "kobayashi_benchmark/benchmark/scenarios"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["E501"]
